--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,24 @@
         android:supportsRtl="true"
         android:hardwareAccelerated="false"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.MyImageViewActivity">
+
+        </activity>
+        <activity android:name=".activity.PaintTestActivity">
+
+        </activity>
+        <activity android:name=".activity.PolytoPolyActivity">
+
+        </activity>
+        <activity android:name=".activity.SearchActivity">
+
         </activity>
     </application>
 
